--- a/css/app.css
+++ b/css/app.css
@@ -12210,6 +12210,9 @@ h6, .h6 {
   margin-top: 40px;
   margin-bottom: 16px;
 }
+#single-event-banner h6, #single-event-banner .h6 {
+  font-weight: 400;
+}
 
 #single-event-content {
   padding-top: 32px;
